--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+html, body {
+    background: #000 !important;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    min-height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
